--- a/hobbies.html
+++ b/hobbies.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hobbies</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Hobbies</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="path/to/styles.css">
 </head>
 
 <nav>
