--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HCI Assignment 4</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="path/to/styles.css">
 </head>
 <body>
 
-<nav>
-    <div class="heading">
-
-        <h4>HCI</h4>
-    
-      </div>
-    <ul class="nav-links">
-
-      <li><a class="active" href="index.html">Biodata</a></li>
-
-      <li><a href="socials.html">Socials</a></li>
-
-      <li><a href="hobbies.html">Hobbies</a></li>
-
-      <li><a href="experience.html">Experience</a></li>
-
-    </ul>
-
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container"> 
+        <a class="navbar-brand" href="#">HCI</a> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Biodata</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="socials.html">Socials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hobbies.html">Hobbies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
   <div class="container">
     <div class="id-card">
