--- a/hobbies.html
+++ b/hobbies.html
@@ -4,53 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<nav>
-
-    <div class="heading">
-
-      <h4>HCI</h4>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">HCI</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Biodata</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="socials.html">Socials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hobbies.html">Hobbies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <ul class="nav-links">
-
-      <li><a href="index.html">Biodata</a></li>
-
-      <li><a href="socials.html">Socials</a></li>
-
-      <li><a class="active" href="hobbies.html">Hobbies</a></li>
-
-      <li><a href="experience.html">Experience</a></li>
-
-    </ul>
-
-  </nav>
+</nav>
   <body>
     <center>
-        <div class="socialpage">
-            <div class="image-box">
-                    <img src="anime.jpg" alt="anime"></a>
-                <div class="image-text">
-                    <p>anime</p></a>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="anime.jpg" class="card-img-top" alt="Anime">
+                        <div class="card-body">
+                            <h5 class="card-title">Anime</h5>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            
-            <div class="image-box">
-                    <img src="art.png" alt="art"></a>
-                <div class="image-text">
-                    <p>art</p>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="art.png" class="card-img-top" alt="Art">
+                        <div class="card-body">
+                            <h5 class="card-title">Art</h5>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            
-            <div class="image-box">
-                    <img src="craft.jpg" alt="crafts">
-                <div class="image-text">
-                    <p>crafts</p>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="craft.jpg" class="card-img-top" alt="Crafts">
+                        <div class="card-body">
+                            <h5 class="card-title">Crafts</h5>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </div>            
         </div>
-        </center>
-  </body>
+    </center>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
+</html>
