--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HCI Assignment 4</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container"> 
-        <a class="navbar-brand" href="#">HCI</a> 
+    <div class="container">
+        <a class="navbar-brand" href="#">HCI</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,18 +33,27 @@
     </div>
 </nav>
 
-  <div class="container">
-    <div class="id-card">
-        <div class="id-photo">
-            <img src="profile.jpeg" title="ppl call me cindy, not reginia" alt="this is a picture of cindy">
-        </div>
-        <div class="id-text"><b>
-            <p>Name: Cindy Reginia Wang</p>
-            <p>NIM: 2702334815</p>
-            <p>Class: L1AC</p>
-            <p>Gender: Female</p>
-            <p>Birthday : 11 October 2005</p></b>
-        </div>
-    </div>
+<div class="container">
+  <div class="card">
+      <div class="row">
+          <div class="col-md-4">
+              <img src="profile.jpeg" class="card-img" alt="Cindy's Photo">
+          </div>
+          <div class="col-md-8">
+              <div class="card-body">
+                  <h5 class="card-title">Cindy Reginia Wang</h5>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item"><strong>NIM:</strong> 2702334815</li>
+                      <li class="list-group-item"><strong>Class:</strong> L1AC</li>
+                      <li class="list-group-item"><strong>Gender:</strong> Female</li>
+                      <li class="list-group-item"><strong>Birthday:</strong> 11 October 2005</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
   </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
+</html>
