--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="#">HCI</a>
@@ -25,8 +24,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="hobbies.html">Hobbies</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="experience.html">Experience</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownExperience" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Experience
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownExperience">
+                        <li><a class="dropdown-item" href="experience.html">Coding</a></li>
+                        <li><a class="dropdown-item" href="experience.html">Education</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -53,6 +58,7 @@
       </div>
   </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
